--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@solana-developers/helpers": "^2.8.1",
     "@solana/web3.js": "^1.98.4",
     "dotenv": "^17.2.3",
     "esrun": "^3.2.30"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1"
   }
 }
