--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@solana-developers/helpers": "^2.8.1",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "dotenv": "^17.2.3",
     "esrun": "^3.2.30"
